--- a/src/VaporEngine/VaporEngine.vcxproj.filters
+++ b/src/VaporEngine/VaporEngine.vcxproj.filters
@@ -1,27 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{d0b61f5b-30eb-4b01-97e9-0a3d41d338bb}</UniqueIdentifier>
+    <Filter Include="VaporEngine">
+      <UniqueIdentifier>{4338F097-AFED-688D-38E2-6264A4965F91}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\VaporEngine\Core.h" />
-    <ClInclude Include="src\VaporEngine\Application.h" />
     <ClInclude Include="src\VaporEngine.h" />
-    <ClInclude Include="src\VaporEngine\EntryPoint.h" />
-    <ClInclude Include="src\VaporEngine\Log.h" />
+    <ClInclude Include="src\VaporEngine\Application.h">
+      <Filter>VaporEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\VaporEngine\Core.h">
+      <Filter>VaporEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\VaporEngine\EntryPoint.h">
+      <Filter>VaporEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\VaporEngine\Log.h">
+      <Filter>VaporEngine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\VaporEngine\Application.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>VaporEngine</Filter>
     </ClCompile>
     <ClCompile Include="src\VaporEngine\Log.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>VaporEngine</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
