--- a/VaporEngine/VaporEngine.vcxproj.filters
+++ b/VaporEngine/VaporEngine.vcxproj.filters
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <Filter Include="Platform">
+      <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\Windows">
+      <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
+    </Filter>
     <Filter Include="VaporEngine">
       <UniqueIdentifier>{4338F097-AFED-688D-38E2-6264A4965F91}</UniqueIdentifier>
     </Filter>
@@ -9,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
+      <Filter>Platform\Windows</Filter>
+    </ClInclude>
     <ClInclude Include="src\VaporEngine.h" />
     <ClInclude Include="src\VaporEngine\Application.h">
       <Filter>VaporEngine</Filter>
@@ -31,21 +40,36 @@
     <ClInclude Include="src\VaporEngine\Events\MouseEvent.h">
       <Filter>VaporEngine\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\VaporEngine\Layer.h">
+      <Filter>VaporEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\VaporEngine\LayerStack.h">
+      <Filter>VaporEngine</Filter>
+    </ClInclude>
     <ClInclude Include="src\VaporEngine\Log.h">
       <Filter>VaporEngine</Filter>
     </ClInclude>
+    <ClInclude Include="src\VaporEngine\Window.h">
+      <Filter>VaporEngine</Filter>
+    </ClInclude>
     <ClInclude Include="src\vepch.h" />
-    <ClInclude Include="src\VaporEngine\Window.h" />
-    <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
+      <Filter>Platform\Windows</Filter>
+    </ClCompile>
     <ClCompile Include="src\VaporEngine\Application.cpp">
+      <Filter>VaporEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\VaporEngine\Layer.cpp">
+      <Filter>VaporEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\VaporEngine\LayerStack.cpp">
       <Filter>VaporEngine</Filter>
     </ClCompile>
     <ClCompile Include="src\VaporEngine\Log.cpp">
       <Filter>VaporEngine</Filter>
     </ClCompile>
     <ClCompile Include="src\vepch.cpp" />
-    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
   </ItemGroup>
 </Project>
