--- a/VaporEngine/VaporEngine.vcxproj.filters
+++ b/VaporEngine/VaporEngine.vcxproj.filters
@@ -4,6 +4,9 @@
     <Filter Include="Platform">
       <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Platform\OpenGL">
+      <UniqueIdentifier>{1E7D2C1D-8A08-9AE1-9319-1DD6FF23F6E1}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Platform\Windows">
       <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
     </Filter>
@@ -13,8 +16,14 @@
     <Filter Include="VaporEngine\Events">
       <UniqueIdentifier>{C79A3151-B37E-F2A6-1CDF-ECF908E2DC28}</UniqueIdentifier>
     </Filter>
+    <Filter Include="VaporEngine\ImGui">
+      <UniqueIdentifier>{AD93C021-19AA-BEB7-6221-4AD9CE768F3F}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h">
+      <Filter>Platform\OpenGL</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
       <Filter>Platform\Windows</Filter>
     </ClInclude>
@@ -40,6 +49,9 @@
     <ClInclude Include="src\VaporEngine\Events\MouseEvent.h">
       <Filter>VaporEngine\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\VaporEngine\ImGui\ImGuiLayer.h">
+      <Filter>VaporEngine\ImGui</Filter>
+    </ClInclude>
     <ClInclude Include="src\VaporEngine\Layer.h">
       <Filter>VaporEngine</Filter>
     </ClInclude>
@@ -55,11 +67,17 @@
     <ClInclude Include="src\vepch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
+      <Filter>Platform\OpenGL</Filter>
+    </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
       <Filter>Platform\Windows</Filter>
     </ClCompile>
     <ClCompile Include="src\VaporEngine\Application.cpp">
       <Filter>VaporEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\VaporEngine\ImGui\ImGuiLayer.cpp">
+      <Filter>VaporEngine\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="src\VaporEngine\Layer.cpp">
       <Filter>VaporEngine</Filter>
