input and keycodes

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=450,47
-Size=682,642
+Pos=135,51
+Size=682,652
+Collapsed=0
+
+[Window][Example: Console]
+Pos=182,59
+Size=520,600
 Collapsed=0
 
