--- a/VaporEngine/VaporEngine.vcxproj.filters
+++ b/VaporEngine/VaporEngine.vcxproj.filters
@@ -65,6 +65,10 @@
       <Filter>VaporEngine</Filter>
     </ClInclude>
     <ClInclude Include="src\vepch.h" />
+    <ClInclude Include="src\VaporEngine\Input.h" />
+    <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
+    <ClInclude Include="src\VaporEngine\KeyCodes.h" />
+    <ClInclude Include="src\VaporEngine\MouseButtonCodes.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
@@ -89,5 +93,6 @@
       <Filter>VaporEngine</Filter>
     </ClCompile>
     <ClCompile Include="src\vepch.cpp" />
+    <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
   </ItemGroup>
 </Project>
