--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "VaporEngine/vendor/imgui"]
 	path = VaporEngine/vendor/imgui
 	url = https://github.com/GaryFrazier/imgui
+[submodule "VaporEngine/vendor/glm"]
+	path = VaporEngine/vendor/glm
+	url = https://github.com/g-truc/glm
